# BANDORI-PET-Android

./: .gitignore  README.md  README_ANDROID.md  prompt.json  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.txt
app/src/main/cpp/: CMakeLists.txt  live2d_jni.cpp
app/src/main/java/com/bandori/pet/: FullscreenLive2DActivity.kt  I18n.kt  MainActivity.kt  PetSettings.kt  WallpaperAdjustActivity.kt
app/src/main/java/com/bandori/pet/android/: AssetInstaller.kt  Live2DGLView.kt  MainActivity.kt  NativeLive2D.kt  OutfitRepository.kt
app/src/main/java/com/bandori/pet/data/: AppModels.kt  DataRepository.kt  ZstModelArchive.kt
app/src/main/java/com/bandori/pet/floating/: FloatingLive2DOverlayService.kt
app/src/main/java/com/bandori/pet/live2d/: AssetSync.kt  Live2DRenderView.kt  NativeLive2D.kt
app/src/main/java/com/bandori/pet/llm/: ActionTagParser.kt  CharacterPromptRepository.kt  ChatHistoryRepository.kt  Live2DChatViewModel.kt  LlmChatClient.kt  LlmModels.kt
app/src/main/java/com/bandori/pet/ui/: FormatUtils.kt  ImageBitmapCache.kt
app/src/main/java/com/bandori/pet/wallpaper/: Live2DWallpaperService.kt
app/src/main/jniLibs/: README.md  README.txt
app/src/main/res/drawable/: ic_chat_24.xml  ic_cube_24.xml  ic_send_24.xml  ic_settings_24.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: live2d_wallpaper.xml
characters/若叶睦/: A_若叶睦.md  soul.md
docs/: zstd-native-lib.md
lang/: en.json  ja.json  zh.json
(+9 files in other folders)
